--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Scraper</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>scrapper</title>
+  </head>
+  <body>
     <button type="button" id="scrape" name="button">Scrape!</button>
-</body>
+  </body>
 </html>
